# cris-discord-bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
cogs/: admin.py  automod.py  economy.py  fun.py  leveling.py  moderation.py  roleshop.py  starboard.py  suggestions.py  tickets.py  utility.py
core/: bot.py  checks.py  config.py  constants.py  database.py  embeds.py  errors.py  interactions.py  logging.py  tree.py
migrations/: 001_initial.sql
services/: automod_service.py  economy_service.py  leveling_service.py  moderation_service.py  roleshop_service.py  starboard_service.py  suggestion_service.py  ticket_service.py
tests/: test_config.py  test_economy_service.py  test_interactions.py  test_leveling_service.py
views/: confirmations.py  roleshop.py  suggestions.py  tickets.py
